<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogAboutMe"
    tools:layout_editor_absoluteY="81dp">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31">


        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/about_me_main"
            android:textColor="@color/black"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="casual"
            android:text="@string/about_me"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_name" />

        <RelativeLayout
            android:id="@+id/mail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body"
            android:clickable="true"
            android:focusable="true"
            >
            <ImageView
                android:id="@+id/mailImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="0dp"
                android:src="@drawable/mail_logo" />
            <TextView
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toRightOf="@id/mailImage"
                android:layout_marginEnd="8dp"
                android:fontFamily="casual"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/mail"
                android:textIsSelectable="true"
                android:textColor="@color/grey"
                android:textSize="24dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/vk_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mail_layout"
            android:clickable="true"
            android:focusable="true"
            >

            <ImageView
                android:id="@+id/vkImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="0dp"
                android:src="@drawable/vk_logo" />

            <TextView
                android:id="@+id/vk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/vkImage"
                android:fontFamily="casual"
                android:gravity="center_vertical"
                android:text="Chong Nguen"
                android:layout_marginStart="5dp"
                android:layout_centerVertical="true"
                android:textColor="@color/grey"
                android:textSize="24dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/git_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vk_layout"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/gitImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="0dp"
                android:src="@drawable/git_logo" />
            <TextView
                android:id="@+id/git"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/gitImage"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:text="boyfromasia"
                android:textColor="@color/grey"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </RelativeLayout>

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@id/git_layout"
            android:background="@drawable/shape_dialog"
            android:fontFamily="casual"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>